[package]
name = "worker"
version = "0.1.0"
authors = ["Jatin Katyal <jatin.katyal13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "0.28.4"
log = "0.4.8"
serde_json = "1.0.44"
base64 = "0.11.0"
serde = "1.0.104"
confy = "0.3.1"
